# lychee

./: Cargo.toml  build_and_run.ps1  readme.md
data/: arrays.lyc  input.txt  lychee.toml  main.lyc  number_guessing.lyc  output.txt  std.lyc  string_test.lyc  struct_test.lyc  submodule.lyc  test.bud  test.las  test.lyc  test.lyo  test.out  writenum.lyc
data/input/: main.c
data/main/: generic_test.lyc  loop_test.lyc
data/output/: main.exe.s  main.s
data/src/: main.lyc  std.lyc
data/src/main/: enum_test.lyc
data/src/std/: array.lyc  io.lyc  (+5 more)
data/std/: arrays.lyc  io.lyc  panic.lyc  print.lyc  strings.lyc  vec.lyc
data/test/: enum_test.lyc  generic_test.lyc  loop_test.lyc  variables_test.lyc  various_test.lyc
data2/: lychee.toml
data2/src/: main.lyc
lychee-vm/: Cargo.toml
lychee-vm/src/: core.rs  input.rs  lib.rs  main.rs
src/: Main.kt  assembler.rs  compiler.rs  instructions.rs  lib.rs  main.rs  registers.rs
src/assembler/: Assembler.kt  core.rs  instruction_type.rs
src/backend/: Assembler.kt
src/codegen/: CodeGen.kt  CodeGenerator.kt  GeneratorVisitor.kt  Instruction.kt
src/compiler/: analyzer.rs  builtin.rs  codegen.rs  codegen2.rs  config.rs  lexer.rs  merger.rs  parser.rs  parser2.rs  preprocessor.rs  resolver.rs  unwrapper.rs
src/frontend/: Frontend.kt  InputData.kt
src/lexer/: Lexer.kt  Token.kt  TokenStack.kt
src/parser/: AST.kt  Expression.kt  IFactor.kt  Operators.kt  Parser.kt  ParsingException.kt  PrintVisitor.kt  Program.kt  Statement.kt
src/util/: PathUtil.kt
vm/: Cargo.toml
vm/src/: core.rs  input.rs  main.rs
(+67 files in other folders)
