[package]
name = "lychee-compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.93", features = ["backtrace"] }
clap = { version = "4.5.21", features = ["derive"] }
lazy_static = "1.5.0"
serde = { version = "1.0.216", features = ["derive"] }
thiserror = "2.0.3"
toml = "0.8.19"

[workspace]
members = [
    "lychee-vm",
]
